test finish base complete

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <head>
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
-    <link rel="stylesheet" media="(min-width: 900px)" href="../static/css/index_pc.css">
-    <link rel="stylesheet" media="(max-width: 900px)" href="../static/css/index_mobile.css">
+    <link rel="stylesheet" media="(min-width: 900px)" href="./static/css/index_pc.css">
+    <link rel="stylesheet" media="(max-width: 900px)" href="./static/css/index_mobile.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../static/js/index.js"></script>
+    <script type="text/javascript" src="./static/js/index.js"></script>
   </head>
 
 <body>
