--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="gnav__wrap">
             <ul class="gnav__menu">
                 <li class="gnav__menu__item"><a href="#">Top</a></li>
-                <li class="gnav__menu__item"><a href="#">About us</a></li>
+                <li class="gnav__menu__item"><a href="./pages/about.html">About us</a></li>
             </ul>
         </div>
     </nav>
