--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@
     <nav class="gnav">
         <div class="gnav__wrap">
             <ul class="gnav__menu">
-                <li class="gnav__menu__item"><a href="#">Top</a></li>
+                <li class="gnav__menu__item"><a href="../index.html">Top</a></li>
                 <li class="gnav__menu__item"><a href="#">About us</a></li>
             </ul>
         </div>
