--- a/pages/about.html
+++ b/pages/about.html
@@ -1,9 +1,19 @@
-<head>
+<head prefix="og: https://ogp.me/ns#">
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
     <link rel="stylesheet" media="(min-width: 900px)" href="../static/css/index_pc.css">
     <link rel="stylesheet" media="(max-width: 900px)" href="../static/css/index_mobile.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。このページでは、早稲田祭運営スタッフにおける、各局、各チームの活動等の紹介をしています。"> 
+    <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田">
+    <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/about.html" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-局紹介" />
+    <meta property="og:description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。このページでは、早稲田祭運営スタッフにおける、各局、各チームの活動等の紹介をしています。" />
+    <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
+    <meta property="og:image" content=" サムネイル画像のURL" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@staff_wasedasai" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="../static/js/index.js"></script>
   </head>
