--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <link rel="stylesheet" media="(min-width: 900px)" href="./static/css/index_pc.css">
     <link rel="stylesheet" media="(max-width: 900px)" href="./static/css/index_mobile.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。入会方法や、各活動紹介等を掲載しています。"> 
+    <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田">
+    <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト" />
+    <meta property="og:description" content="早稲田祭の運営を担当する、早稲田祭運営スタッフ2023年度新歓用公式サイトです。入会方法や、各活動紹介等を掲載しています。" />
+    <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
+    <meta property="og:image" content=" サムネイル画像のURL" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@staff_wasedasai" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="./static/js/index.js"></script>
   </head>
