meta compnents noindex

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
 
 </header>
-<div class="qqq">
+<div class="spacer" style="height:1000%;">
     afdawf@pegtkw0eaujgi9paswjhp9gbaen bp9qwayp9et bhiupppp
 
     sada
