--- a/pages/components.html
+++ b/pages/components.html
@@ -4,6 +4,17 @@
     <link rel="stylesheet" media="(min-width: 900px)" href="../static/css/index_pc.css">
     <link rel="stylesheet" media="(max-width: 900px)" href="../static/css/index_mobile.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。"> 
+    <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田">
+    <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/about.html" />
+    <meta property="og:type" content="article" />
+    <meta name="robots" content="noindex" />
+    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-局紹介" />
+    <meta property="og:description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。" />
+    <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
+    <meta property="og:image" content=" サムネイル画像のURL" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@staff_wasedasai" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="../static/js/index.js"></script>
   </head>
@@ -27,6 +38,21 @@
 
 </header>
 
+<div class="spacer" style="height:100%;">
+    aaaaaaaaaaaa
+    appear-class="as
+    s
+    ada
+    da
+    dada
+    adad
+    ad
+    a
+    dad
+    a
+    da
+    da"
+</div>
 
 <footer>
 <div class="footer-parent">
