--- a/pages/components.html
+++ b/pages/components.html
@@ -1,8 +1,8 @@
 <head>
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
-    <link rel="stylesheet" media="(min-width: 900px)" href="../static/css/index_pc.css">
-    <link rel="stylesheet" media="(max-width: 900px)" href="../static/css/index_mobile.css">
+    <link rel="stylesheet" media="(min-width: 1200px)" href="../static/css/index_pc.css">
+    <link rel="stylesheet" media="(max-width: 1200px)" href="../static/css/index_mobile.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。"> 
     <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田">
@@ -53,6 +53,13 @@
     da
     da"
 </div>
+
+<div class="paragraph">
+    SampleBox1アリスは川辺でおねえさんのよこにすわって、なんにもすることがないのでとても退屈（たいくつ）しはじめていました。
+
+    一、二回はおねえさんの読んでいる本をのぞいてみたけれど、そこには絵も会話もないのです。
+    「絵や会話のない本なん
+    </div>
 
 <footer>
 <div class="footer-parent">
