--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,9 @@
 <head prefix="og: https://ogp.me/ns#">
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="(min-width: 900px)" href="../static/css/index_pc.css">
     <link rel="stylesheet" media="(max-width: 900px)" href="../static/css/index_mobile.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
