blocktitle作りました

--- a/pages/components.html
+++ b/pages/components.html
@@ -64,6 +64,22 @@
     「絵や会話のない本なん
     </div>
 
+<div class="blocktitle-green">
+    test
+</div>
+
+<div class="blocktitle-yellow">
+    test
+</div>
+
+<div class="blocktitle-pink">
+    test
+</div>
+
+<div class="blocktitle-navy">
+    test
+</div>
+
 <footer>
 <div class="footer-parent">
     
