--- a/pages/components.html
+++ b/pages/components.html
@@ -64,21 +64,34 @@
     「絵や会話のない本なん
     </div>
 
-<div class="blocktitle-green">
-    test
-</div>
+<blocktitle>
 
+    <div class="blocktitle-green">
+    　test　
+</div>
 <div class="blocktitle-yellow">
-    test
+   abcdefghijklmnopq
 </div>
 
 <div class="blocktitle-pink">
-    test
+    　test　
 </div>
 
 <div class="blocktitle-navy">
+   　 test　
+</div>
+</blocktitle>
+
+<sectiontitle>
+<div class="sectiontitle-pentagon">
+    test
+<img src="/Users/iam_mai/2023-Shinkan/webサイト用素材-04.png">
+</div>
+
+<div class="sectiontitle-hexagon">
     test
 </div>
+</sectiontitle>
 
 <footer>
 <div class="footer-parent">
