--- a/pages/components.html
+++ b/pages/components.html
@@ -20,8 +20,8 @@
   </head>
 
 <body>
-<header>
-
+<header class="bar">
+      
     <div class="menu">
         <span class="menu__line menu__line--top"></span>
         <span class="menu__line menu__line--center"></span>
@@ -31,11 +31,21 @@
         <div class="gnav__wrap">
             <ul class="gnav__menu">
                 <li class="gnav__menu__item"><a href="../index.html">Top</a></li>
-                <li class="gnav__menu__item"><a href="#">About us</a></li>
+                <li class="gnav__menu__item"><a href="#">運営スタッフとは</a></li>
+                <li class="gnav__menu__item"><a href="#">局紹介</a></li>
+                <li class="gnav__menu__item"><a href="#">入会方法</a></li>
+                <li class="gnav__menu__item"><a href="#">新歓情報</a></li>
+                <li class="gnav__menu__item"><a href="#">お問合せ</a></li>
+                <li class="gnav__menu__item"><a href="#">運スタ写真館</a></li>
             </ul>
         </div>
     </nav>
+        <div class="logo">
+             <img src="../static/img/logo.png" height="50px">
+            </div>
+        
 
+   
 </header>
 
 <div class="spacer" style="height:100%;">
