--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">   
-    <link rel="stylesheet" media="(min-width: 900px)" href="./static/css/index_pc.css">
-    <link rel="stylesheet" media="(max-width: 900px)" href="./static/css/index_mobile.css">
+    <link rel="stylesheet" media="(min-width: 1200px)" href="./static/css/index_pc.css">
+    <link rel="stylesheet" media="(max-width: 1200px)" href="./static/css/index_mobile.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。入会方法や、各活動紹介等を掲載しています。"> 
@@ -23,23 +23,30 @@
   </head>
 
 <body>
-<header>
-
-    <div class="menu">
-        <span class="menu__line menu__line--top"></span>
-        <span class="menu__line menu__line--center"></span>
-        <span class="menu__line menu__line--bottom"></span>
-  </div>
-    <nav class="gnav">
-        <div class="gnav__wrap">
-            <ul class="gnav__menu">
-                <li class="gnav__menu__item"><a href="#">Top</a></li>
-                <li class="gnav__menu__item"><a href="./pages/about.html">About us</a></li>
-            </ul>
-        </div>
-    </nav>
-
-</header>
+    <header class="bar">
+      
+        <div class="menu">
+            <span class="menu__line menu__line--top"></span>
+            <span class="menu__line menu__line--center"></span>
+            <span class="menu__line menu__line--bottom"></span>
+      </div>
+        <nav class="gnav">
+            <div class="gnav__wrap">
+                <ul class="gnav__menu">
+                    <li class="gnav__menu__item"><a href="../index.html">Top</a></li>
+                    <li class="gnav__menu__item"><a href="#">運営スタッフとは</a></li>
+                    <li class="gnav__menu__item"><a href="#">局紹介</a></li>
+                    <li class="gnav__menu__item"><a href="#">入会方法</a></li>
+                    <li class="gnav__menu__item"><a href="#">新歓情報</a></li>
+                    <li class="gnav__menu__item"><a href="#">お問合せ</a></li>
+                    <li class="gnav__menu__item"><a href="#">運スタ写真館</a></li>
+                </ul>
+            </div>
+        </nav>
+            <div class="logo">
+                 <img src="./static/img/logo.png" height="50px">
+                </div>
+    </header>
 <div class="spacer" style="height:1000%;">
     afdawf@pegtkw0eaujgi9paswjhp9gbaen bp9qwayp9et bhiupppp
 
