--- a/pages/components.html
+++ b/pages/components.html
@@ -12,10 +12,10 @@
     <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/about.html" />
     <meta property="og:type" content="article" />
     <meta name="robots" content="noindex" />
-    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-局紹介" />
+    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-components" />
     <meta property="og:description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。" />
     <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
-    <meta property="og:image" content=" サムネイル画像のURL" />
+    <meta property="og:image" content="サムネイル画像のURL" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@staff_wasedasai" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -34,12 +34,12 @@
             <div class="gnav__wrap">
                 <ul class="gnav__menu">
                     <li class="gnav__menu__item"><a href="../index.html">Top</a></li>
-                    <li class="gnav__menu__item"><a href="#">運営スタッフとは</a></li>
-                    <li class="gnav__menu__item"><a href="#">局紹介</a></li>
-                    <li class="gnav__menu__item"><a href="#">入会方法</a></li>
-                    <li class="gnav__menu__item"><a href="#">新歓情報</a></li>
-                    <li class="gnav__menu__item"><a href="#">お問合せ</a></li>
-                    <li class="gnav__menu__item"><a href="#">運スタ写真館</a></li>
+                    <li class="gnav__menu__item"><a href="aboutus.html">運営スタッフとは</a></li>
+                    <li class="gnav__menu__item"><a href="introduce.html">局紹介</a></li>
+                    <li class="gnav__menu__item"><a href="howto.html">入会方法</a></li>
+                    <li class="gnav__menu__item"><a href="event.html">新歓情報</a></li>
+                    <li class="gnav__menu__item"><a href="contact.html">お問合せ</a></li>
+                    <li class="gnav__menu__item"><a href="photogallery.html">運スタ写真館</a></li>
                 </ul>
             </div>
         </nav>
@@ -107,27 +107,27 @@
 
           <hr />
           <ul class="nav-list">
-           <li>HOME</li> <li>早稲田祭とは</li>
-            <li>運営スタッフとは</li>
+           <li><a href="../index.html">HOME</a></li> <li><a href="aboutfes.html">早稲田祭とは</a></li>
+            <li><a href="aboutus.html">運営スタッフとは</a></li>
           </ul>
           <hr />
           <ul class="nav-list">
             
-            <li>局紹介
+            <li> <a href ="introduce.html">局紹介</a>
             </li>
-            <li>入会方法
+            <li><a href ="howto.html">入会方法</a>
             </li>
-            <li>
+            <li><a href="aboutstaff.html">
              スタッフの内情
-            </li>
-            <li>運営スタッフ全体像</li>
+            </a></li>
+            <li><a href="overall.html">運営スタッフ全体像</a></li>
           </ul>
           <hr />
           <ul class="nav-list">
-            <li>新歓情報</li>
-            <li>運スタ写真館</li>
-            <li>よくある質問</li>
-            <li><NuxtLink :to="'/otoiawase'">お問い合わせについて</li>
+            <li><a href ="event.html">新歓情報</a></li>
+            <li><a href="photogallery.html">運スタ写真館</a></li>
+            <li><a href="question.html">よくある質問</a></li>
+            <li><a href="contact.html">お問い合わせについて</a></li>
           </ul>
         </div>
       </div>
@@ -161,7 +161,7 @@
             alt="youtubeのリンク"
         /></a>
         <a
-          href="https://lin.ee/WgDcNIW"
+          href="https://linevoom.line.me/user/_dYhT9WMHSKev8Oi2AB7qJZK6ocoEW_uYk8j2h3w"
           target="_blank"
           rel="noopener noreferrer"
           ><img
@@ -172,6 +172,4 @@
       </div>
     </div>
 </footer>
-
-
 </body>
