--- a/pages/photogallery.html
+++ b/pages/photogallery.html
@@ -4,22 +4,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" media="(min-width: 1200px)" href="static/css/index_pc.css">
-    <link rel="stylesheet" media="(max-width: 1200px)" href="static/css/index_mobile.css">
+    <link rel="stylesheet" media="(min-width: 1200px)" href="../static/css/index_pc.css">
+    <link rel="stylesheet" media="(max-width: 1200px)" href="../static/css/index_mobile.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。"> 
     <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田">
     <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/about.html" />
     <meta property="og:type" content="article" />
     <meta name="robots" content="noindex" />
-    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト" />
+    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-運スタ写真館" />
     <meta property="og:description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。" />
     <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
-    <meta property="og:image" content="static/img/logo_catch.png"/>
+    <meta property="og:image" content="サムネイル画像のURL" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@staff_wasedasai" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="static/js/index.js"></script>
+    <script type="text/javascript" src="../static/js/index.js"></script>
 </head>
 
 <body>
@@ -33,18 +33,18 @@
         <nav class="gnav">
             <div class="gnav__wrap">
                 <ul class="gnav__menu">
-                    <li class="gnav__menu__item"><a href="index.html">Top</a></li>
-                    <li class="gnav__menu__item"><a href="pages/aboutus.html">運営スタッフとは</a></li>
-                    <li class="gnav__menu__item"><a href="pages/introduce.html">局紹介</a></li>
-                    <li class="gnav__menu__item"><a href="pages/howto.html">入会方法</a></li>
-                    <li class="gnav__menu__item"><a href="pages/event.html">新歓情報</a></li>
-                    <li class="gnav__menu__item"><a href="pages/contact.html">お問合せ</a></li>
-                    <li class="gnav__menu__item"><a href="pages/photogallery.html">運スタ写真館</a></li>
+                    <li class="gnav__menu__item"><a href="../index.html">Top</a></li>
+                    <li class="gnav__menu__item"><a href="aboutus.html">運営スタッフとは</a></li>
+                    <li class="gnav__menu__item"><a href="introduce.html">局紹介</a></li>
+                    <li class="gnav__menu__item"><a href="howto.html">入会方法</a></li>
+                    <li class="gnav__menu__item"><a href="event.html">新歓情報</a></li>
+                    <li class="gnav__menu__item"><a href="contact.html">お問合せ</a></li>
+                    <li class="gnav__menu__item"><a href="photogallery.html">運スタ写真館</a></li>
                 </ul>
             </div>
         </nav>
             <div class="logo">
-                 <img src="static/img/logo.png" height="50px">
+                 <img src="../static/img/logo.png" height="50px">
                 </div>
     </header>
 
@@ -64,11 +64,11 @@
     da"
  </div>
  <div class="heroblue">
-    <img src="static/img/heroblue.png"class="herophoto">
+    <img src="../static/img/heroblue.png"class="herophoto">
     <p>hero</p>
 </div>
 <div class="herowhite">
-    <img src="static/img/herowhite.png"class="herophoto">
+    <img src="../static/img/herowhite.png"class="herophoto">
     <p>hero</p>
 </div>
 
@@ -100,34 +100,34 @@
     <div class="footer-inner">
       <div class="footer-body">
         <div class="footer-logo-container">
-          <img class="footer-logo" src="static/img/logo_catch.png"
+          <img class="footer-logo" src="../static/img/logo_catch.png"
           />
         </div>
         <div class="footer-navi-list">
 
           <hr />
           <ul class="nav-list">
-           <li><a href="index.html">HOME</a></li> <li><a href="pages/aboutfes.html">早稲田祭とは</a></li>
-            <li><a href="pages/aboutus.html">運営スタッフとは</a></li>
+           <li><a href="../index.html">HOME</a></li> <li><a href="aboutfes.html">早稲田祭とは</a></li>
+            <li><a href="aboutus.html">運営スタッフとは</a></li>
           </ul>
           <hr />
           <ul class="nav-list">
             
-            <li> <a href ="pages/introduce.html">局紹介</a>
+            <li> <a href ="introduce.html">局紹介</a>
             </li>
-            <li><a href ="pages/howto.html">入会方法</a>
+            <li><a href ="howto.html">入会方法</a>
             </li>
-            <li><a href="pages/aboutstaff.html">
+            <li><a href="aboutstaff.html">
              スタッフの内情
             </a></li>
-            <li><a href="pages/overall.html">運営スタッフ全体像</a></li>
+            <li><a href="overall.html">運営スタッフ全体像</a></li>
           </ul>
           <hr />
           <ul class="nav-list">
-            <li><a href ="pages/event.html">新歓情報</a></li>
-            <li><a href="pages/photogallery.html">運スタ写真館</a></li>
-            <li><a href="pages/question.html">よくある質問</a></li>
-            <li><a href="pages/contact.html">お問い合わせについて</a></li>
+            <li><a href ="event.html">新歓情報</a></li>
+            <li><a href="photogallery.html">運スタ写真館</a></li>
+            <li><a href="question.html">よくある質問</a></li>
+            <li><a href="contact.html">お問い合わせについて</a></li>
           </ul>
         </div>
       </div>
@@ -139,7 +139,7 @@
           rel="noopener noreferrer"
           ><img
             class="sns-link"
-            src="static/img/twitter.png"
+            src="../static/img/twitter.png"
             alt="twitterのリンク"
         /></a>
         <a
@@ -148,7 +148,7 @@
           rel="noopener noreferrer"
           ><img
             class="sns-link"
-            src="static/img/instagram.png"
+            src="../static/img/instagram.png"
             alt="instagramのリンク"
         /></a>
         <a
@@ -157,7 +157,7 @@
           rel="noopener noreferrer"
           ><img
             class="sns-link"
-            src="static/img/youtube.png"
+            src="../static/img/youtube.png"
             alt="youtubeのリンク"
         /></a>
         <a
@@ -166,7 +166,7 @@
           rel="noopener noreferrer"
           ><img
             class="sns-link"
-            src="static/img/line.png"
+            src="../static/img/line.png"
             alt="noteのリンク"
         /></a>
       </div>
