--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/about.html" />
     <meta property="og:type" content="article" />
     <meta name="robots" content="noindex" />
-    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-運スタの実情" />
+    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-運営スタッフとは" />
     <meta property="og:description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。" />
     <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
     <meta property="og:image" content="サムネイル画像のURL" />
