これがちゃんとsectiontilteです

--- a/pages/components.html
+++ b/pages/components.html
@@ -83,13 +83,14 @@
 </blocktitle>
 
 <sectiontitle>
-<div class="sectiontitle-pentagon">
-    test
+<div class="box">    
 <img src="/Users/iam_mai/2023-Shinkan/webサイト用素材-04.png">
+<p class="sectiontitle-pentagon">text</p>
 </div>
 
-<div class="sectiontitle-hexagon">
-    test
+<div class="box2">
+<img src="/Users/iam_mai/2023-Shinkan/webサイト用素材-03.png">
+<p class="sectiontitle-hexagon">text</p>
 </div>
 </sectiontitle>
 
