--- a/pages/components.html
+++ b/pages/components.html
@@ -96,6 +96,35 @@
     「絵や会話のない本なん
 </div>
 
+<div class="blocktitle-green">
+  test
+</div>
+<div class="blocktitle-yellow">
+ test
+</div>
+
+<div class="blocktitle-pink">
+  test
+</div>
+
+<div class="blocktitle-navy">
+ test
+</div>
+
+<div class="section-title1">
+  <img class="section1-img" src="../static/img/section1.png"
+  />
+  <div class="section1-text">参加対応局</div>
+  </div>
+  <div>
+
+    <div class="section-title2">
+      <img class="section2-img" src="../static/img/section2.png"
+      />
+      <div class="section2-text">参加対応局</div>
+      </div>
+      <div>
+
  <footer class="footer">
     <div class="footer-inner">
       <div class="footer-body">
