--- a/pages/photogallery.html
+++ b/pages/photogallery.html
@@ -50,9 +50,11 @@
               </div>
   </header>
 
-<div class="sectiontitle">
-当日の様子
-</div> 
+  <div class="section-title1">
+    <img class="section1-img" src="../static/img/section1.png"
+    />
+    <div class="section1-text">早稲田祭当日の様子</div>
+    </div>
 
 <div class="flex-parents">
 <div class="flex-child1-1">
@@ -304,9 +306,11 @@
         </div> 
       </div>
   
-      <div class="sectiontitle">
-        日々の活動風景
-        </div> 
+      <div class="section-title2">
+        <img class="section2-img" src="../static/img/section2.png"
+          />
+        <div class="section2-text">活動風景</div>
+         </div>
 
         <div class="flex-parents">
 <div class="flex-child1-1">
@@ -761,6 +765,15 @@ body{
   height:100%;
   object-fit: cover;
   }
+
+ .section-title1{
+  margin-left: 20px;
+ }
+
+ .section-title2{
+  margin-left: 20px;
+  margin-top: 10px;
+ }
 
 </style>
 </body>
