--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -48,52 +48,131 @@
                 </div>
     </header>
 
- <div class="spacer" style="height:100%;">
-    aaaaaaaaaaaa
-    appear-class="as
-    s
-    ada
-    da
-    dada
-    adad
-    ad
-    a
-    dad
-    a
-    da
-    da"
- </div>
  <div class="heroblue">
     <img src="../static/img/heroblue.png"class="herophoto">
-    <p>hero</p>
-</div>
-<div class="herowhite">
-    <img src="../static/img/herowhite.png"class="herophoto">
-    <p>hero</p>
+    <p>運営スタッフとは？</p>
 </div>
 
-<div class="squarelinkpink">
-    <a href="" class="btn-pink btn-border-shadow btn-border-shadow--color">squarelink</a>
+<div class="box1"> 
+
+  <div class="section-title1 title1">
+    <img class="section1-img" src="../static/img/section1.png"
+    />
+    <div class="section1-text">代表の言葉</div>
+    </div>
+
+    <div class="hexagon">
+      <img src="../static/img/hexagon-pink.png">
+    </div>
+
+    <div class="flexparent1">
+
+      <div class="flex-child1">
+        <div class="sammy">
+          <img src="../static/img/sammy.jpg">
+        </div>
+      </div>
+
+      <div class="flex-child2">
+        <div class="daihyo">
+          <div class="blocktitle-navy">
+            佐溝 眞行
+          </div>
+        </div>
+         <div class="paragraph">
+            はじめまして。
+            早稲田祭2023運営スタッフ代表の佐溝 眞行と申します。
+            早大生は、自分がときめく「何か」を追い求めて、常にまだ見ぬ先へと進み続けています。
+            そんな彼らの本気と情熱があふれんばかりに詰まった日本最大級の祭が、早稲田祭です。
+            「春に出会う、秋に咲く」
+            春に運営スタッフと出会ったみなさん。
+            早稲田文化が一斉に花開くあの景色を夢見て。
+            一歩ずつ進み続けたその先には、立派な運営スタッフの1人として秋の大舞台で花を咲かせる瞬間が待っています。
+            えんじのはっぴを背負って、みなさんと共に活動できる日を楽しみにしています。
+            早稲田祭2023運営スタッフ 代表
+      </div>
+      </div>
+    </div>
+
 </div>
 
-<div class="squarelinkgreen">
-    <a href="" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">squarelink</a>
+<div class="box2">
+  <img src="../static/img/hexagon-pink-border.png" class="hexa-border">
+
+  <div class="title-box2">
+    <div class="section-title1 title2">
+      <img class="section1-img" src="../static/img/section1.png"
+      />
+      <div class="section1-text">活動内容</div>
+      </div>
+  </div>
+  <div class="paragraph box2-paragraph">
+    日本最大級の学園祭である早稲田祭をつくるため、資金調達からその資金の管理、祭の主要企画の立案・運営、早稲田祭に企画を出す参加団体・参加者の方々との調整まで、さまざまな活動を行っています。その他にも、早稲田祭の広報、当日の装飾物の制作、祭のさらなる進化を目指した企画や取り組みの立案・運営など、1年をかけて早稲田祭を準備しています。
+    祭当日も、会場内外の警備や案内、運営スタッフ自体の人員や物の管理、企画の運営など、運営スタッフとしての活動は本当に多岐にわたります。
+    そのため、運営スタッフとしてはひとつの団体ですが、その中で8つの「局」という部署に分かれて活動しています！
+    詳しい局の種類や活動内容はこちらのページをご覧ください！
+  </div>
 </div>
 
-<div class="squarelinkyellow">
-    <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">squarelink</a>
+<div class="box-345">
+<div>
+
+<div class="box3">
+  <div class="title-box2">
+    <div class="section-title1 title3">
+      <img class="section1-img" src="../static/img/section1.png"
+      />
+      <div class="section1-text">所属人数</div>
+      </div>
+  </div>
 </div>
 
-<div class="squarelinkred">
-    <a href="" class="btn-red btn-border-shadow-red btn-border-shadow--color-red">squarelink</a>
+<div class="box4">
+  <div class="box4-contents">
+  例年約600人が所属しています！
+  </div>
 </div>
 
+<div class="box3">
+  <div class="title-box2">
+    <div class="section-title1 title3">
+      <img class="section1-img" src="../static/img/section1.png"/>
+      <div class="section1-text">活動日</div>
+      </div>
+  </div>
+</div>
 
-<div class="paragraph">
-    SampleBox1アリスは川辺でおねえさんのよこにすわって、なんにもすることがないのでとても退屈（たいくつ）しはじめていました。
+<div class="box5">
+    <div class="box5-contents">
+      毎週月曜日、木曜日の6限～
+    </div>
+</div>
+</div>
 
-    一、二回はおねえさんの読んでいる本をのぞいてみたけれど、そこには絵も会話もないのです。
-    「絵や会話のない本なん
+<img src="../static/img/box5.jpg" class="img-345">
+</div>
+
+<div class="box6">
+  <div class="title-box6">
+    <div class="section-title1 title2">
+      <img class="section1-img" src="../static/img/section1.png"
+      />
+      <div class="section1-text">はっぴ</div>
+      </div>
+  </div>
+</div>
+
+<div class="box7">
+  <div class="box7-container">
+    <img src="../static/img/happi.jpg">
+    <div class="paragraph box7-text">
+      運営スタッフを象徴するはっぴ。
+早稲田大学の校色であるえんじ色を基調としていて、祭当日だけでなくさまざまな場面で着る機会があります。
+背紋の大きな「祭」の字を背負うことで、士気が高まること間違いなし！
+
+    </div>
+
+  </div>
 </div>
 
  <footer class="footer">
@@ -172,4 +251,269 @@
       </div>
     </div>
 </footer>
+<style>
+
+  .box1{
+    width: 100%;
+    position: relative;
+    background-color: #fff;
+    padding-bottom: 20px;
+  }
+
+  .title1{
+    margin-left: 20px;
+  } 
+  
+  .sammy img{
+    width:100%;
+    border-radius: 10px;
+  }
+
+  .hexagon{
+    position: absolute;
+    top:0;
+    left:-10%;
+    width:20%;
+  }
+
+  .hexagon img{
+    width: 100%;
+  }
+
+  .flexparent1{
+    display:flex;
+    width:85%;
+    margin: auto;
+  }
+
+  .flex-child1{
+    width:28%;
+    margin-right:30px;
+  }
+
+  .flex-child2{
+    width:68%;
+  }
+  .blocktitle-navy{
+  margin-bottom: 16px;
+  margin-left: 8px;
+  position: relative;
+  display: inline;
+  margin: 0 auto;
+  font-size: 24px;
+  vertical-align: middle;
+}
+.blocktitle-navy::after{
+  content: '';
+  position: absolute;
+  left: -5px;
+  bottom: -4px; /*下線の上下位置調整*/
+  display: inline-block;
+  width: calc(100% + 5px); /*下線の幅*/
+  height: 3px; /*下線の太さ*/
+  background-color: #566c7d; /*下線の色*/
+  border-radius: 2px;
+}
+
+.daihyo{
+  margin-bottom:15px;
+}
+
+.box2{
+  width:80%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.title2{
+  margin: 0 auto;
+  z-index:5;
+  background-color: #E3FFF6;
+}
+
+.title-box2{
+  width:100%;
+  margin: 0 auto;
+}
+
+
+.box2::before{
+  content:"";
+   display:block;
+   width:50%;
+   height:5px;
+   background-color:#F46E74;
+   z-index: 1;
+   position:absolute;
+   top:50px;
+   left:-10%;
+}
+
+.box2::after{
+   content:"";
+   display:block;
+   width:15%;
+   height:5px;
+   background-color:#F46E74;
+   z-index: 1;
+   position:absolute;
+   top: 50px;
+   transform-origin: 0 0;
+   transform: rotate(90deg);
+   left:-4.7%;
+}
+
+.hexa-border{
+  width:10%;
+  transform: translateX(-50%);
+  transform: translateY(-50%);
+  position:absolute;
+  top:52px;
+  left: -10%;
+  z-index: 4;
+  background-color: #E3FFF6;
+}
+
+.box3{
+  width:100%;
+}
+
+.title3{
+  margin-left: 20px;
+  z-index: 5;
+  background-color: #E3FFF6;
+}
+
+.box4{
+  width:80%;
+  margin: 0 auto;
+  position: relative;
+  margin-bottom:80px;
+}
+
+.box4-contents{
+  font-weight:700;
+  font-size: 27px;
+}
+
+.box4::after{
+   content:"";
+   display:block;
+   width:30%;
+   height:5px;
+   background-color:#F46E74;
+   z-index: 1;
+   position:absolute;
+   top: 50px;
+   transform-origin: 0 5px;
+   transform: rotate(-90deg);
+   left:-4.7%;
+}
+
+.box5{
+  width:80%;
+  margin: 0 auto;
+  position: relative;
+  padding-bottom:80px;
+}
+
+
+
+.box5-contents{
+  font-weight:700;
+  font-size: 27px;
+}
+
+.box5::before{
+   content:"";
+   display:block;
+   width:17.6%;
+   height:5px;
+   background-color:#F46E74;
+   z-index: 1;
+   position:absolute;
+   top:0;
+   left:-4.7%;
+   transform-origin: 0 0;
+   transform: rotate(90deg);
+}
+
+
+.box-345{
+  width: 100%;
+  position: relative;
+}
+
+.img-345{
+  width: 35%;
+  position: absolute;
+  right:10%;
+  top:10%;
+}
+
+.box6{
+  width:80%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.box6::before{
+   content:"";
+   display:block;
+   width:50%;
+   height:5px;
+   background-color:#F46E74;
+   z-index: 1;
+   position:absolute;
+   top:50px;
+   left:-4.7%;
+}
+
+.box6::after{
+   content:"";
+   display:block;
+   width:50%;
+   height:5px;
+   background-color:#77A9AA;
+   z-index: 1;
+   position:absolute;
+   top: 50px;
+   transform-origin: 0 0;
+   right:-4.7%;
+}
+
+.box7{ 
+  width:80%;
+  margin: 0 auto;
+  position: relative;
+  background-color: #E3FFF6;
+  z-index:7;
+}
+
+.box7-container{
+  display: flex;
+}
+
+.box7-container img{
+  width: 30%;
+}
+
+.box7-text{
+  margin-left: 20px;
+}
+
+.box7::after{
+   content:"";
+   display:block;
+   width:50%;
+   height:5px;
+   background-color:#77A9AA;
+   z-index: 1;
+   position:absolute;
+   transform-origin: right bottom;
+   transform: rotate(90deg);
+   right:-4.7%;
+}
+
+</style>
 </body>
