お問い合わせページ作りました

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/about.html" />
     <meta property="og:type" content="article" />
     <meta name="robots" content="noindex" />
-    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-お問い合わせ" />
+    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-スタッフの内情" />
     <meta property="og:description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。" />
     <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
     <meta property="og:image" content="サムネイル画像のURL" />
@@ -48,52 +48,27 @@
                 </div>
     </header>
 
- <div class="spacer" style="height:100%;">
-    aaaaaaaaaaaa
-    appear-class="as
-    s
-    ada
-    da
-    dada
-    adad
-    ad
-    a
-    dad
-    a
-    da
-    da"
- </div>
+
  <div class="heroblue">
     <img src="../static/img/heroblue.png"class="herophoto">
-    <p>hero</p>
-</div>
-<div class="herowhite">
-    <img src="../static/img/herowhite.png"class="herophoto">
-    <p>hero</p>
+    <p>お問い合わせについて</p>
 </div>
 
-<div class="squarelinkpink">
-    <a href="" class="btn-pink btn-border-shadow btn-border-shadow--color">squarelink</a>
+<div class="spacer" style="height:15%;">
+  
 </div>
-
-<div class="squarelinkgreen">
-    <a href="" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">squarelink</a>
-</div>
-
-<div class="squarelinkyellow">
-    <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">squarelink</a>
-</div>
-
-<div class="squarelinkred">
-    <a href="" class="btn-red btn-border-shadow-red btn-border-shadow--color-red">squarelink</a>
-</div>
-
 
 <div class="paragraph">
-    SampleBox1アリスは川辺でおねえさんのよこにすわって、なんにもすることがないのでとても退屈（たいくつ）しはじめていました。
+  早稲田祭2023運営スタッフや新歓企画などについて、何かご質問がございましたらshinkan@wasedasai.netまでお気軽にお問い合わせください。
+  </div>
 
-    一、二回はおねえさんの読んでいる本をのぞいてみたけれど、そこには絵も会話もないのです。
-    「絵や会話のない本なん
+<style>
+  .paragraph{text-align: center;
+  background-color: white;}
+  .spacer{background-color: white;}
+</style>
+<div class="spacer" style="height:15%;">
+  
 </div>
 
  <footer class="footer">
