--- a/pages/aboutstaff.html
+++ b/pages/aboutstaff.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/about.html" />
     <meta property="og:type" content="article" />
     <meta name="robots" content="noindex" />
-    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-スタッフの内情" />
+    <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-お問い合わせ" />
     <meta property="og:description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。" />
     <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
     <meta property="og:image" content="サムネイル画像のURL" />
@@ -47,6 +47,12 @@
                  <img src="../static/img/logo.png" height="50px">
                 </div>
     </header>
+    <div class="heroblue">
+      <img src="../static/img/heroblue.png"class="herophoto">
+      <p>スタッフの内情</p>
+    </div>
+
+
 
  <div class="spacer" style="height:100%;">
     aaaaaaaaaaaa
@@ -63,31 +69,32 @@
     da
     da"
  </div>
- <div class="heroblue">
-    <img src="../static/img/heroblue.png"class="herophoto">
-    <p>hero</p>
-</div>
-<div class="herowhite">
-    <img src="../static/img/herowhite.png"class="herophoto">
-    <p>hero</p>
-</div>
 
-<div class="squarelinkpink">
-    <a href="" class="btn-pink btn-border-shadow btn-border-shadow--color">squarelink</a>
-</div>
+ <div class="section-title2">
+  <img class="section2-img" src="../static/img/section2.png"
+  />
+  <div class="section2-text">参加対応局</div>
+  </div>
 
-<div class="squarelinkgreen">
-    <a href="" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">squarelink</a>
-</div>
+  <div class="section-title2">
+    <img class="section2-img" src="../static/img/section2.png"
+    />
+    <div class="section2-text">参加対応局</div>
+    </div>
 
-<div class="squarelinkyellow">
-    <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">squarelink</a>
-</div>
+    <div class="section-title2">
+      <img class="section2-img" src="../static/img/section2.png"
+      />
+      <div class="section2-text">参加対応局</div>
+      </div>
 
-<div class="squarelinkred">
-    <a href="" class="btn-red btn-border-shadow-red btn-border-shadow--color-red">squarelink</a>
-</div>
+      <div class="section-title2">
+        <img class="section2-img" src="../static/img/section2.png"
+        />
+        <div class="section2-text">参加対応局</div>
+        </div>
 
+ 
 
 <div class="paragraph">
     SampleBox1アリスは川辺でおねえさんのよこにすわって、なんにもすることがないのでとても退屈（たいくつ）しはじめていました。
