aタグの色追加

--- a/pages/top.html
+++ b/pages/top.html
@@ -342,6 +342,12 @@
     padding-bottom: 10px;
     color:#08263a;
   }
+  .toptext a{
+    color:#77a9aa;
+  }
+  .toptext a:hover{
+    color:#f7c4c6;
+  }
         @media screen and (max-width: 1024px) and (min-width: 520px){
           .four-one{
             width:fit-content;
@@ -544,6 +550,12 @@ font-size:15px;
     font-weight: 400;
     padding-bottom: 10px;
     color:#08263a;
+  }
+  .toptext2 a{
+    color:#77a9aa;
+  }
+  .toptext2 a:hover{
+    color:#f7c4c6;
   }
          @media screen and (max-width: 1024px) and (min-width: 520px){
            .four-three{
