文字情報等の修正

--- a/pages/aboutfes.html
+++ b/pages/aboutfes.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="../static/js/index.js"></script>
 </head>
 
-<body>
+<body class="aboutfesbody">
     <header class="bar">
       
         <div class="menu">
@@ -62,12 +62,11 @@
             <div>
           <div class="box">
             <div class="itemm">
-              <div><strong>早稲田祭とは、年に一度行われる、日本最大級の学園祭！</strong></div>            <div class="item">
-              <p>1953年　第1回統一早稲田祭</p>            
-              <p>2002年　早稲田祭運営スタッフ結成</p>
-              <p>2019年 コロナ流行前完全対面開催</p>
+              <div><strong>早稲田祭とは、年に1度行われる、日本最大級の学園祭！</strong></div> 
+              <div class="item">
+              <p>2019年　コロナ流行前最後のオフライン開催</p>
               <p>2020年 初のオンライン開催</p>
-              <p>2021年 初のオンライン・対面同時開催</p>
+              <p>2021年　初のハイブリッド開催</p>
               <p>2022年 制限のある対面開催</p>
             </div>
             <div class="itemm">
@@ -84,11 +83,11 @@
                 企画数
               </div>
             <br></br>
-              <p>2019　約<strong>450</strong>企画</p>
+              <p>2019年　約<strong>450</strong>企画</p>
               <p>　⇓</p>
-              <p>2020　約300企画</p>
+              <p>2020年　約300企画</p>
               <p>　⇓</p>
-              <p>2022　約<strong>350</strong>企画</p>            
+              <p>2022年　約<strong>350</strong>企画</p>            
             </div>
             <div class="item">
               <p></p> 
@@ -96,11 +95,11 @@
                 来場者数
               </div>
            <br> </br>
-              <p>2019　約<strong>20</strong>万人　　</p>
+              <p>2019年　約<strong>20</strong>万人　　</p>
               <p>　⇓</p>
-              <p>　2020　オンライン開催</p>
+              <p>　2020年　オンライン開催</p>
               <p>　⇓</p>
-              <p>2022　約<strong>6万</strong>人　　</p>              
+              <p>2022年　約<strong>6万</strong>人　　</p>              
             </div>
             <div class="item">
               <p></p> 
@@ -108,11 +107,11 @@
                 予算規模
               </div>
             <br></br>
-              <p>2019　約<strong>3800</strong>万円</p>
+              <p>2019年　約<strong>3800</strong>万円</p>
               <p>　⇓</p>
-              <p>2020　約<strong>1800</strong>万円</p>
+              <p>2020年　約<strong>1800</strong>万円</p>
               <p>　⇓</p>
-              <p>2022　約<strong>3300</strong>万円</p>
+              <p>2022年　約<strong>3300</strong>万円</p>
             </div>
           </div>
         </div>
@@ -200,7 +199,10 @@
 </body>
 
 <style scoped>
-
+.aboutfesbody{
+  background-color: #ffffff;
+  color:#08263A;
+}
 .section-title2 {
   margin-left: auto;
   margin-right: auto;
@@ -208,18 +210,15 @@
   
   .section-inner {
     max-width: 1024px;
-    padding: 0px 0px 40px 55px;
+    padding-bottom: 40px;
     margin: auto;
-    background:white;
   }
   .history-section{
-    background-color: white;
     font-size: 18px;
     line-height: 1em;
-    height: 450px;
+    padding-bottom: 40px;
   }
   .data-section {
-    background: white;
     font-size: 18px;
     line-height:  0.9em;
   }
@@ -227,7 +226,6 @@
   .history-section .item {
     padding: 0.5rem 0;
     gap: 1rem;
-    background-color: white;
     text-align: center;
  
   }
@@ -239,17 +237,10 @@
 
   .itemm2 {
     text-align: center;
-    padding-bottom: 45px;
-   
+    padding-bottom: 40px;
     font-size: 20px;
     line-height: 20px;
   }
-  
-  
- 
-
-  
-  
   .data-section .box {
     display: flex;
     justify-content: space-around;
@@ -288,10 +279,9 @@
   }
   
   .data-section .box .item {
-    background:white;
     width: 235px;
     height:240px;
-    border-radius: 12px;
+    border-radius: 25px;
     color: #08263A;
     text-align: center;
     padding: 1rem;
