お問合せページの文字情報修正

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -53,22 +53,18 @@
     <img src="../static/img/heroblue.png"class="herophoto">
     <p>お問い合わせについて</p>
 </div>
-
 <div class="spacer" style="height:15%;">
-  
 </div>
-
 <div class="paragraph">
-  早稲田祭2023運営スタッフや新歓企画などについて、何かご質問がございましたらshinkan@wasedasai.netまでお気軽にお問い合わせください。
+  早稲田祭2023や運営スタッフに関して、何かご質問がございましたらshinkan@wasedasai.netまでお気軽にお問い合わせください。
   </div>
 
 <style>
   .paragraph{text-align: center;
-  background-color: white;}
-  .spacer{background-color: white;}
+  background-color: #ffffff;}
+  .spacer{background-color: #ffffff;}
 </style>
 <div class="spacer" style="height:15%;">
-  
 </div>
 
  <footer class="footer">
